tests/baselines/reference/parseJsxElementInUnaryExpressionNoCrash3.errors.txt
a.js(1,3): error TS17008: JSX element '' has no corresponding closing tag.
a.js(1,4): error TS1003: Identifier expected.
a.js(1,5): error TS1005: '...' expected.
a.js(3,1): error TS1005: '</' expected.


==== a.js (4 errors) ====
    !< {:>
      
!!! error TS17008: JSX element '' has no corresponding closing tag.
       ~
!!! error TS1003: Identifier expected.
        ~
!!! error TS1005: '...' expected.
    
    
    
!!! error TS1005: '</' expected.